# marrow

./: .gitattributes  .gitignore  .marrowrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md
.cargo/: audit.toml
.cursor/epics/: marrow-ram-latency-epic.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ci/: perf-thresholds.json
docs/: configuration.md  context-packets.md  mcp-payload-limits.md  perf-baseline-runbook.md  perf-harness.md  phase-c-worker-spike.md  sqlite-query-plans.md
docs/benchmarks/: benchmark-6-free-choice-ab.md  benchmark-6-ground-truth.md  benchmark-7-capability-map.md  benchmark-7-ground-truth.md  production-rails-monolith.md
docs/plans/: 2026-03-02-benchmark-subcommand-design.md  2026-03-02-benchmark-subcommand.md
npm/: LICENSE  README.md  package-lock.json  package.json
npm/scripts/: install.js
scripts/: deb-postinst.sh  generate_icon.py  package-linux-appimage.sh  package-macos-dmg.sh  postinst  stage-linux-package-assets.sh
src/: activity.rs  context.rs  db.rs  doctor.rs  ingestion.rs  ipc.rs  lib.rs  main.rs  packaging.rs  registry.rs  retrieval.rs  service.rs  skills.rs  state.rs  ui_app.rs  watcher.rs
src/daemon/: mod.rs  pool.rs  routes.rs
src/dashboard/: index.html  mod.rs
test_fixtures/repo_a/: example.py  large_example.py  utils.ts  widget.cpp
tests/: activity.rs  cli_args.rs  context_packet.rs  daemon_cleanup.rs  daemon_security.rs  dashboard_global.rs  desktop_app_hosting.rs  install_security.rs  mcp_proxy.rs  registry.rs  sprint2_install_experience.rs
tests/fixtures/context_packet_repo/src/: admin.py  request.py
tools/: README.md  cc_audit.py  pricing_overrides.json
wix/: main.wxs
