[package]
name = "rust-ast-context-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Official Anthropic MCP SDK for Rust
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-io"] }

# High-performance async runtime
tokio = { version = "1.36", features = ["full"] }

# SQLite with Write-Ahead Logging support
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Serialization for MCP Tool schemas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON Schema derivation (required by rmcp macros)
schemars = "1.0"

# AST Parsing Core
tree-sitter = "0.26.6"

# Language Grammars
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"

# Required for tree-sitter query iteration
streaming-iterator = "0.1"

# Parallel processing for multi-repo ingestion
rayon = "1.10.0"
anyhow = "1.0"

# Tokenizer for token reduction delta quantifications
tiktoken-rs = "0.5.9"

# Respects .gitignore + custom ignore patterns for directory walking
ignore = "0.4"

# Interactive terminal UI for the integrate installer
dialoguer = "0.11"
console = "0.15"

# Live web dashboard
axum            = { version = "0.8", features = ["macros"] }
tower-http      = { version = "0.6", features = ["cors"] }
open            = "5"
tokio-stream    = "0.1"
futures-util    = "0.3"